--- a/src/less/style.less
+++ b/src/less/style.less
@@ -3,7 +3,7 @@
 @import "mixins.less";
 @import "scaffolding.less";
 @import "blocks/header.less";
-@import "blocks/right.less";
+@import "blocks/header__nav.less";
 @import "blocks/icon.less";
 @import "blocks/left.less";
 @import "blocks/left__top.less";
