--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -8,21 +8,23 @@
 }
 
 
-/*.container{
-  margin: 0 auto;
-  min-width: 990px;
-  max-width: 1226px;
-}*/
+.container {
+  max-width: 1170px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
 * {
   box-sizing: border-box;
 }
  
- /*.navigation {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
- }*/
+.main__nav {
+    position: relative;
+    top: 80px;
+    margin: auto;
+    background-color: #f3f3f3;
+}
+ 
 
 
 @media screen and (min-width: 1070px) {
