--- a/src/less/style.less
+++ b/src/less/style.less
@@ -4,9 +4,10 @@
 @import "scaffolding.less";
 @import "blocks/header.less";
 @import "blocks/header__nav.less";
-@import "blocks/icon.less";
-@import "blocks/left.less";
-@import "blocks/left__top.less";
-@import "blocks/left__middle.less";
-@import "blocks/left__down.less";
-@import "blocks/right__col.less";
+@import "blocks/slider.less";
+@import "blocks/font.less";
+@import "blocks/search.less";
+@import "blocks/about-btn.less";
+/*@import "blocks/slick.less";*/
+@import "blocks/main__news.less";
+/*@import "font-awesome/less/variables.less";*/
