--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,15 +1,23 @@
 /* LESS Document */
-@bg-darkgrey: #292929;
-@bg-lightgrey: #fff;
+@bg-lightgrey: #ececec;
+@bg-darkgrey: rgba(127, 140, 140, 1);
 
 @hover-bg: #F5F5F5;
 
+@font: 'Open Sans', sans-serif;
+
+/*размер шрифтов*/
+
+
 @baseNV1: 11px;
+/*стандартный текст*/
 @baseNV2: 13px;
-@baseH2: 15px;
-@baseFS: 13px;
-@baseP: 13px;
-@baseLH1: 46px;
+@baseHN-h: 14px;
+@baseHN: 13px;
+@baseLS: 25px;
+/*большой логотип и h2*/
+@baseLB: 30px;
 
-
+/*цвет шрифта*/
+@bodyFont: #7f8c8c;
 
