--- a/src/less/blocks/header__nav.less
+++ b/src/less/blocks/header__nav.less
@@ -1,4 +1,4 @@
-@media screen and (max-width: 728px) {
+@media screen and (max-width: 933px) {
     
 
 
@@ -19,7 +19,7 @@
         -moz-transition: right 0.3s;
         transition: right 0.3s;
         /* определяем цвет фона панели */
-        background: /*url(../img/bg-logo.jpg)*/#16a085;
+        background: /*url(../img/bg-logo.jpg)*/#62a29e;
         /* поверх других элементов */
         z-index: 2000;
     }
@@ -35,7 +35,7 @@
     /* относительно правого края панели */
     right: 344px; /*по умолчанию было 320px*/
     /* отступ от верхнего края панели */
-    top: 0px;
+    top: 15px;
     width: 50px;
     height: 50px;
     /* внутренние отступы */
@@ -211,6 +211,11 @@ body {
     transition: opacity .5s .7s, transform .5s .7s;
 }
 
+.header__nav > ul > li:nth-child(8) {
+    -webkit-transition: opacity .5s .8s, -webkit-transform .5s .7s;
+    transition: opacity .5s .8s, transform .5s .8s;
+}
+
 /**
  * оформление ссылок пунктов меню
  */
@@ -219,10 +224,10 @@ body {
     display: inline-block;
     position: relative;
     padding: 0;
-    font-family: 'Merriweather', serif;
+    font-family: @font;
     font-weight: 400;
     font-size: 1.2em;
-    color: #dadada;
+    color: #fff/*#dadada*/;
     width: 100%;
     text-decoration: none;
     /* плавный переход */
