--- a/src/less/blocks/main__news.less
+++ b/src/less/blocks/main__news.less
@@ -109,5 +109,11 @@
   }
 
   .fa-vk {
-  	color: blue;
+  	color: #fff;
+  	border-radius: 1px solid black;
+  	padding: 3px 8px 5px 5px;
+  	background-color: rgb(80,114,153);
+  	border-radius: 5px;
   }
+
+  
