--- a/src/less/style.less
+++ b/src/less/style.less
@@ -8,6 +8,6 @@
 @import "blocks/font.less";
 @import "blocks/search.less";
 @import "blocks/about-btn.less";
-/*@import "blocks/slick.less";*/
 @import "blocks/main__news.less";
 /*@import "font-awesome/less/variables.less";*/
+@import "blocks/main__geo.less";
