--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -1,10 +1,13 @@
-/*.fotorama {
-    height: 500px;
-}*/
 
+@media screen and (max-width: 933px){
+.fotorama {
+   padding-top: 0px;
+}
+}
 
 .fotorama {
     background-color: #ececec;
+   padding-top: 30px;
 }
 
 .text-slider {
