--- a/src/less/style.less
+++ b/src/less/style.less
@@ -11,3 +11,4 @@
 @import "blocks/main__news.less";
 /*@import "font-awesome/less/variables.less";*/
 @import "blocks/main__geo.less";
+@import "blocks/main__block.less";
