--- a/src/less/blocks/about-btn.less
+++ b/src/less/blocks/about-btn.less
@@ -18,6 +18,10 @@
 	margin-top: 50px;
 }
 
+.main__about-text {
+	margin-bottom: 15px;
+}
+
 .main__about-text h2{
 	font-size: @baseLB;
 	color: @bodyFont;
