--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -3,9 +3,10 @@
     width: 100vw;
 
     background-color: #76c7c0;
+    opacity: 0.95;
 
     position: fixed;
-    z-index: 200;
+    z-index: 1001;
 }
 
 .header__logo {
