--- a/src/less/style.less
+++ b/src/less/style.less
@@ -12,3 +12,4 @@
 /*@import "font-awesome/less/variables.less";*/
 @import "blocks/main__geo.less";
 @import "blocks/main__block.less";
+@import "blocks/footer.less";
