--- a/src/less/blocks/main__block.less
+++ b/src/less/blocks/main__block.less
@@ -1,3 +1,14 @@
+/*.main__block-container {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+*/
+.main__block {
+	position: relative;
+}
+
+
 .block__name {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 30px;
@@ -172,7 +183,7 @@
 
 .graphik-name {
 	text-align: center;
-	padding-top: 25px;
+	padding-top: 15px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	font-weight: 700;
