--- a/src/less/blocks/main__geo.less
+++ b/src/less/blocks/main__geo.less
@@ -1,3 +1,16 @@
+@media screen and (max-width: 933px) {
+	
+	.dg-container {
+		display: none;
+	}
+
+	.dg-fotorama {
+		display: block;
+	}
+
+	
+}
+
 .main__geo {
 	position: relative;
 	height: 400px;
@@ -7,6 +20,7 @@
     background-repeat: repeat-x;
     background-position: top;
     margin-top: 60px;
+    margin-bottom: 280px;
 }
 
 .main__geo-name {
@@ -26,7 +40,6 @@
 	line-height: 21px;
 	font-weight: 400;
 	color: #777777;
-	padding-bottom: 70px;
 	text-align: center;
 }
 
@@ -40,6 +53,7 @@
 	width: 100%;
 	height: 450px;
 	position: relative;
+	margin-top: 20px;
 }
 .dg-wrapper{
 	width: 481px;
@@ -120,15 +134,3 @@
 	margin-left: 10px;
 }
 
-@media screen and (max-width: 933px) {
-	
-	.dg-container {
-		display: none;
-	}
-
-	.dg-fotorama {
-		display: block;
-	}
-
-	
-}
