--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -35,9 +35,9 @@ table{
 
 
 
-body{
+/*body{
   font-family: Arial, Helvetica, sans-serif;
-}
+}*/
 
 /*убрал синюю подсветку при нажатие*/
 *:focus {
@@ -57,3 +57,24 @@ body{
     border-radius: 5px;
     box-shadow: inset 0.05em 0.05em 0 rgba(0, 0, 0, 0.1), inset 0 -0.05em 0 rgba(0, 0, 0, 0.07);
 }
+
+
+html {
+  height: 100%;
+}
+
+/*.main {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+.main__header {
+  flex: 1 0 auto;
+}
+.main__nav {
+  flex: 1 0 auto;
+}
+.main__footer {
+  flex: 0 0 auto;
+}*/
