поменял первый слайдер

--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -9,3 +9,20 @@
     background-position: top;
     margin-top: 80px;
 }
+
+#toTop {
+width: 50px;
+height: 50px;
+border: 1px solid #ccc;
+background-color: #ececec;
+text-align: center;
+padding: 0;
+position: fixed;
+bottom: 10px; /* отступ кнопки от нижнего края страницы*/
+right: 10px;
+cursor: pointer;
+display: none;
+color: #76c7c0;
+border-radius: 50%;
+}
+
