--- a/src/less/blocks/main__block.less
+++ b/src/less/blocks/main__block.less
@@ -6,6 +6,8 @@
 */
 .main__block {
 	position: relative;
+	padding-left: 15px;
+	padding-right: 15px;
 }
 
 
@@ -13,7 +15,7 @@
 	font-family: 'Open Sans', sans-serif;
 	font-size: 30px;
 	font-weight: 700;
-	line-height: 24px;
+	line-height: 36px;
 	color: @bodyName;
 }
 
@@ -183,11 +185,11 @@
 
 .graphik-name {
 	text-align: center;
-	padding-top: 15px;
+	padding-top: 0px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	font-weight: 700;
-	line-height: 19px;
+	line-height: 36px;
 	color: @bodyFont;
 	text-transform: uppercase;
 }
