--- a/src/less/blocks/about-btn.less
+++ b/src/less/blocks/about-btn.less
@@ -29,7 +29,7 @@
 	line-height: 36px;
 }
 
-.main__about-text p{
+.main__about-text span{
 	font-size: @baseNV2;
 	color: @bodyFont;
 	font-weight: 700;
