--- a/src/less/blocks/font.less
+++ b/src/less/blocks/font.less
@@ -22,7 +22,8 @@
 
 /*Меню*/
 
-.header__nav a{
+.header__nav a,
+.header__nav span{
 	text-decoration: none;
 	color: #fff;
 	text-transform: uppercase;
@@ -31,7 +32,7 @@
 }
 
 
-.header__navigation-active a{
+.header__navigation-active span{
 	font-size: @baseHN-h;
 }
 
