--- a/src/less/blocks/main__news.less
+++ b/src/less/blocks/main__news.less
@@ -108,12 +108,12 @@
   	color: yellow;
   }
 
-  .fa-vk {
+  .icon-vk {
   	color: #fff;
   	border-radius: 1px solid black;
   	padding: 3px 8px 5px 5px;
   	background-color: rgb(80,114,153);
-  	border-radius: 5px;
+  	border-radius: 8px;
   }
 
   
