--- a/src/less/style.less
+++ b/src/less/style.less
@@ -13,3 +13,5 @@
 @import "blocks/main__geo.less";
 @import "blocks/main__block.less";
 @import "blocks/footer.less";
+@import "blocks/bread-crumds.less";
+@import "blocks/content.less";
