--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -1,11 +1,13 @@
 .main__header {
     height: 80px;
     width: 100vw;
+    width: 100%;
 
     background-color: #76c7c0;
     opacity: 0.95;
 
     position: fixed;
+    top: 0;
     z-index: 1001;
 }
 
@@ -13,14 +15,15 @@
     padding-left: 10px;
 }
 
+.main__header {
+    background-image: url(../img/Path.png);
+    background-repeat: repeat-x;
+    background-position: bottom;
+}
 
 @media screen and (min-width: 933px) {
 
-    .main__header {
-        background-image: url(../img/Path.png);
-        background-repeat: repeat-x;
-        background-position: bottom;
-    }
+ 
 
     .header {
         display: flex;
@@ -50,7 +53,7 @@
 
 /*Активное меню*/
 
-    .header__navigation-active a{
+    .header__navigation-active span{
         padding-top: 10px;
         padding-bottom: 10px;
         padding-left: 15px;
@@ -63,7 +66,7 @@
     }
 /*Меню при наведение*/
 
-    .header__navigation:nth-child(n+2) a:hover{
+    .header__navigation a:hover{
         background-color: #e8645a;
 
         border-radius: 5px;
