--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -12,7 +12,7 @@
   max-width: 1170px;
   margin-right: auto;
   margin-left: auto;
-  height: 100%;
+  /*height: 100%;*/
 }
 
 * {
@@ -26,6 +26,9 @@
     background-color: #f3f3f3;
 }
  
+ /*body, header, main {
+  height: 100%;
+ }*/
 
 
 @media screen and (min-width: 1070px) {
