--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -58,23 +58,33 @@ table{
     box-shadow: inset 0.05em 0.05em 0 rgba(0, 0, 0, 0.1), inset 0 -0.05em 0 rgba(0, 0, 0, 0.07);
 }
 
-
-html {
+body {
+  background-color: #fff;
   height: 100%;
 }
 
-/*.main {
+.main {
   display: flex;
+  display: -webkit-flex;
+  display: -webkit-box;
+  display: -moz-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex;
+  min-height: 100vh;
+  flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
-  height: 100%;
-  justify-content: space-between;
+
 }
-.main__header {
-  flex: 1 0 auto;
-}
+
 .main__nav {
-  flex: 1 0 auto;
+  flex: 1;
+  width: 100%;
+  /*flex-basis: 300%;*/
 }
-.main__footer {
-  flex: 0 0 auto;
-}*/
